--- a/braden-walker-portfolio/src/styles/less/landing.less
+++ b/braden-walker-portfolio/src/styles/less/landing.less
@@ -45,12 +45,12 @@
         }
 
         @media @tablet {
-            margin-left: -3px;
+            margin-left: -12px;
         }
 
         @media @phone {
             height: 450px;
-            margin-left: -4px;
+            margin-left: -13px;
         }
     
         .base {
